--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             
 <ul id="navigationBurger-menu" class="menu primaryMenu  ">
         <li class="menu-item   menu-item menu-item-type-post_type menu-item-object-page menu-item-25">
-        <a class="menu-link nice-underline show-on-hover" href="#"><span class="underlined appear--slower">
+        <a class="menu-link nice-underline show-on-hover" href="#"><span class="#">
             Dienstleistungen
         </span></a>
 
