--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             </li>
         <li class="menu-item   menu-item menu-item-type-post_type menu-item-object-page menu-item-29">
-        <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/jobs-karriere/"><span class="#">
+        <a class="menu-link nice-underline show-on-hover" href="#"><span class="#">
             Jobs &amp; Karriere
         </span></a>
 
