--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             </li>
         <li class="menu-item   menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-        <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/kontakt/"><span class="underlined appear--slower">
+        <a class="menu-link nice-underline show-on-hover" href="#"><span class="underlined appear--slower">
             Kontakt
         </span></a>
 
