--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </a>
     </li>
         <li class="menu-item ">
-        <a class="menu-link" href="https://elektro-mc.ch/?s=">
+        <a class="menu-link" href="#">
             <div class="menu-icon">
                 <svg width="13" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="m7.333.285-1 1L9.38 4.332H0v1.333h9.38L6.333 8.712l1 1L12.047 5 7.333.285Z" fill="#fff"></path>
