--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h1 class="header-slider__title">Willkommen im <br>
 Elektro-Bijou</h1>
         <div class="header-slider__actions">
-          <a href="https://elektro-mc.ch/ueber-uns/" target="" class="header-slider__button btn btn--primary">
+          <a href="#" target="" class="header-slider__button btn btn--primary">
               Über uns
           </a>
       </div>
