--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ Elektro-Bijou</h1>
 			<div class="section-intro__text">Taten sind glaubwürdiger als Worte. Deshalb lassen wir lieber unsere Projekte für uns sprechen. </div>
 	
 					<div class="section-intro__actions">
-			<a href="https://elektro-mc.ch/projekte/" class="section-intro__button btn btn--transparent btn--outlined">
+			<a href="#" class="section-intro__button btn btn--transparent btn--outlined">
 				Alle Projekte
 			</a>
 		</div>
