--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ Elektro-Bijou</h1>
                                 <h5 class="box__subtitle">Umsetzung im Jahr 2021</h5>
                                               <div class="box__text">Nach 88 Jahren ist das Unternehmen umgezogen. Wir waren Teil dieses grossen Schrittes. Installation aller Elektro- und Sicherheitstechnik in fünf Monaten – auf 5’000 m2 und für 200 Mitarbeitende.</div>
                                             <div class="box__actions">
-              <a href="https://elektro-mc.ch/projekt/rahn-bodmer/" target="" class="btn btn--primary">
+              <a href="#" target="" class="btn btn--primary">
                 Projekt ansehen
               </a>
             </div>
