--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@ Elektro-Bijou</h1>
           <div class="details__text">Erfahrung ist wichtig, aber erst, wenn auch der Spass mitschwingt, können wir die Kunden so richtig begeistern. Wir setzen alles daran, dass du bei uns einen tollen Job machen kannst und mit Freude tust, was du tust.</div>
 
                       <div class="buttons">
-                                                <a href="https://elektro-mc.ch/jobs-karriere/" class="btn btn--primary">
+                                                <a href="#" class="btn btn--primary">
                     Offene Lehrstellen
                   </a>
                                                                 <a href="https://elektro-mc.ch/jobs-karriere/" class="btn btn--primary">
