--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@ Elektro-Bijou</h1>
                                                 <a href="#" class="btn btn--primary">
                     Offene Lehrstellen
                   </a>
-                                                                <a href="https://elektro-mc.ch/jobs-karriere/" class="btn btn--primary">
+                                                                <a href="#" class="btn btn--primary">
                     Offene Stellen
                   </a>
                                           </div>
@@ -1249,28 +1249,28 @@ Elektro-Bijou</h1>
           <ul class="menu menu--level-0">
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-43">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/dienstleistungen/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" data-nice-underline-hover=""><span class="underlined appear--slower">
         Dienstleistungen
       </span></a>
 
           </li>
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/projekte/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" data-nice-underline-hover=""><span class="underlined appear--slower">
         Projekte
       </span></a>
 
           </li>
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-40">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/ueber-uns/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" data-nice-underline-hover=""><span class="underlined appear--slower">
         Über uns
       </span></a>
 
           </li>
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-42">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/jobs-karriere/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" data-nice-underline-hover=""><span class="underlined appear--slower">
         Offene Stellen
       </span></a>
 
@@ -1289,7 +1289,7 @@ Elektro-Bijou</h1>
           </li>
       <li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-594">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://baumann-koelliker-gruppe.ch/datenschutz/" target="_blank" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" target="_blank" data-nice-underline-hover=""><span class="underlined appear--slower">
         Datenschutz
       </span></a>
 
@@ -1441,7 +1441,7 @@ Elektro-Bijou</h1>
       </aside>
     
                 <div class="footer__credits">
-        <a href="https://baumann-koelliker-gruppe.ch/" target="_blank">
+        <a href="#" target="_blank">
           Ein Unternehmen der Baumann Koelliker Gruppe
         </a>
       </div>
@@ -1486,7 +1486,7 @@ Elektro-Bijou</h1>
             <div class="cookie-notice__text">Wir verwenden Cookies und Skripts, damit der nächste Besuch auf unserer Website noch energie­effizienter ist.</div>
 
             <div class="cookie-notice__actions">
-                <a href="https://baumann-koelliker-gruppe.ch/datenschutz" target="_blank" class="btn btn--sm btn--secondary">
+                <a href="#" target="_blank" class="btn btn--sm btn--secondary">
                     Informationen
                 </a>
                 <a href="https://elektro-mc.ch/#close" target="_blank" class="btn btn--sm btn--primary" data-close-notice="">
