--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@ Elektro-Bijou</h1>
           </li>
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-44">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/agb/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="#" data-nice-underline-hover=""><span class="underlined appear--slower">
         AGB
       </span></a>
 
