--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@ Elektro-Bijou</h1>
         <ul class="menu menu--level-0">
       <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-45">
 
-      <a class="menu-link nice-underline show-on-hover" href="https://elektro-mc.ch/impressum/" data-nice-underline-hover=""><span class="underlined appear--slower">
+      <a class="menu-link nice-underline show-on-hover" href="impressum.html" data-nice-underline-hover=""><span class="underlined appear--slower">
         Impressum
       </span></a>
 
