--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container container--wide">
       <a class="logo logo--light-mode" href="#">
 
-	          elektriker-Fuehrer
+	          elektriker-Peukert
 
 
 
