--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
 	<!-- This site is optimized with the Yoast SEO plugin v23.6 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Elektro M+C Zürich AG - Die Elektriker Ihres Vertrauens</title>
+	<title>Elektriker Peukert</title>
 	<meta name="description" content="Elektroinstallationen, Gebäudetechnik, Photovoltaik. Von uns bekommen Sie das gesamte Leistungsspektrum. Jetzt informieren.">
 	<link rel="canonical" href="https://elektro-mc.ch/">
 	<meta property="og:locale" content="de_DE">
